@@ -1,3 +1,7 @@
+2003-01-24  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* fix compiler warnings
+	* display.c (displayBuffer): fix suggest parentheses around && within ||
 2003-01-24  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03667] fold patch
@@ -6815,4 +6819,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.709 2003/01/23 18:37:18 ukai Exp $
+$Id: ChangeLog,v 1.710 2003/01/23 18:42:51 ukai Exp $
